--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -37,6 +37,7 @@ jobs:
           key: ${{ runner.os }}-sbt-cache-v2-${{ hashFiles('**/*.sbt') }}-${{ hashFiles('project/build.properties') }}
       - if: ${{ github.event_name == 'pull_request' }}
         run: 'sbt scalafmtCheckAll'
+      - run: npm install
       - run: 'sbt ++${{ matrix.scala }} test'
       - if: matrix.scala == '2.13.8'
         run: sbt ++${{ matrix.scala }} documentation/mdoc
